Modified layout, added gulpfile, added font-awesome

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,6 +1,9 @@
 body {
     padding-top: 70px;
 }
+.navbar-brand {
+    font-weight: bold;
+}
 
 /* Syntax highlighting styles */
 /* ----------------------------------------------------------*/
