--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,26 @@
----
-layout: default
----
-<div class="post">
+<!DOCTYPE html>
+<html>
 
-  <header class="post-header">
-    <h1>{{ page.title }}</h1>
-    <p class="meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
-  </header>
+  {% include head.html %}
 
-  <article class="post-content">
-  {{ content }}
-  </article>
+    <body>
+    {% include navbar.html %}
 
-</div>
+    <div class="container">
+      {{ content }}
+      
+    <nav>
+        <ul class="pager">
+            {% if page.next %} <!-- Newer post -->
+                <li class="previous"><a href="{{ page.next.url }}"><span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span> {{ page.next.title }}</a></li>
+            {% endif %}
+            {% if page.previous %} <!-- Older post -->
+                <li class="next"><a href="{{ page.previous.url }}">{{ page.previous.title }} <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span></a></li>
+            {% endif %}
+        </ul>
+    </nav>
+    </div>
+
+    {% include footer.html %}
+    </body>
+</html>
