Added about me info

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,4 +1,15 @@
----
-layout: post
----
-{{ content }}
+<!DOCTYPE html>
+<html>
+
+  {% include head.html %}
+
+    <body>
+    {% include navbar.html %}
+
+    <div class="container">
+      {{ content }}
+    </div>
+
+    {% include footer.html %}
+    </body>
+</html>
