--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,10 @@
     {% include navbar.html %}
 
     <div class="container">
+        <h1>{{ page.title }}</h1>
+        <p>
+            <span class="label label-default">{{ page.date | date: site.date_format }}</span>
+        </p>
       {{ content }}
       
     <nav>
