changed divs to article tags

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,9 +6,9 @@
     <body>
     {% include navbar.html %}
 
-    <div class="container">
+    <article class="container">
       {{ content }}
-    </div>
+    </article>
 
     {% include footer.html %}
     </body>
