--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,10 @@
         </ul>
     </nav>
     </article>
+    
+    <div class="container">
+        {% include disqus-widget.html %}
+    </div>
 
     {% include footer.html %}
     </body>
