--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
     <link href="{{ site.baseurl }}/assets/css/ubuntu-bootstrap.min.css" rel="stylesheet">
     <link href="{{ site.baseurl }}/assets/css/font-awesome.min.css" rel="stylesheet">
     <link href="{{ site.baseurl }}/assets/css/custom.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/manifest.json" rel="manifest">
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
